--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,38 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Masasx</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Masasx</title>
+    <%= csrf_meta_tags %>
 
-<%= yield %>
+    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
+    <![endif]-->
 
-</body>
+    <%= stylesheet_link_tag 'application', media: 'all' %>
+
+    <link href="images/favicon.ico" rel="shortcut icon">
+  </head>
+  <body>
+
+    <%= render partial: 'common/menu' %>
+
+    <div class="container-fluid">
+      <div class="row-fluid">
+        <div class="span3">
+          <%= render partial: 'common/sidebar' %>
+        </div><!--/span-->
+        <div class="span9">
+          <%= yield %>
+        </div>
+      </div>
+
+      <%= render partial: 'common/footer' %>
+
+    </div>
+
+    <%= javascript_include_tag 'application' %>
+
+  </body>
 </html>
