Complete follow next step

--- a/app/views/registrations/agreement.html.erb
+++ b/app/views/registrations/agreement.html.erb
@@ -9,7 +9,7 @@
   <li><a>Step 4</a></li>
 </ul>
 
-<%= simple_form_for @user, url: accept_agreements_path do |f| %>
+<%= simple_form_for @user, url: accept_agreement_path do |f| %>
   <%= f.input :masax_agreement,
               label: 'I accept the MASAS Information eXchange (MASAS-X) Pilot Participation Agreement.',
               as: :boolean %>
