--- a/app/views/registrations/secondary_contact.html.erb
+++ b/app/views/registrations/secondary_contact.html.erb
@@ -1,1 +1,33 @@
 <% title 'Step 3 - Secondary Contact Information' %>
+
+<ul class="nav nav-pills">
+  <li>
+  <%= link_to 'Step 1', registration_path  %>
+  </li>
+  <li>
+  <%= link_to 'Step 2', organization_path(@user)  %>
+  </li>
+  <li class="active">
+  <%= link_to 'Step 3', secondary_contact_path(@user)  %>
+  </li>
+  <li><a>Step 4</a></li>
+</ul>
+
+<%= simple_form_for @user, url: update_secondary_contact_path do |f| %>
+
+  <%= f.input :secondary_contact_name, label: 'Name' %>
+
+  <%= f.input :secondary_contact_title, label: 'Title' %>
+
+  <%= f.input :secondary_contact_language, label: 'Language', collection: Language.all %>
+
+  <%= f.input :secondary_contact_office_email, label: 'Office e-mail' %>
+
+  <%= f.input :secondary_contact_mobile_email, label: 'Mobile e-mail' %>
+
+  <%= f.input :secondary_contact_office_phone, label: 'Office Phone' %>
+
+  <%= f.input :secondary_contact_mobile_phone, label: 'Mobile Phone' %>
+
+  <%= f.button :submit, 'Next', class: 'btn-primary' %>
+<% end %>
