--- a/app/views/registrations/agreement.html.erb
+++ b/app/views/registrations/agreement.html.erb
@@ -9,18 +9,10 @@
   <li><a>Step 4</a></li>
 </ul>
 
-<%= simple_form_for @user, url: accept_agreement_path do |f| %>
-  <%= f.input :masax_agreement,
-              label: 'I accept the MASAS Information eXchange (MASAS-X) Pilot Participation Agreement.',
-              as: :boolean %>
+<%= simple_form_for @user, url: accept_agreement_path, html: { class: 'form-horizontal' } do |f| %>
 
-  <%= f.input :media_agreement,
-              label: 'I am not a member of the media.',
-              as: :boolean %>
+  <%= f.input :agreements, collection: agreements_options, as: :check_boxes %>
 
-  <%= f.input :community_agreement,
-              label: 'I certify that I am a bona fide member of the Canadian Emergency Management community and have a valid reason to join the MASAS-X community.',
-              as: :boolean %>
-
+  <%= f.button :submit, 'Cancel' %>
   <%= f.button :submit, 'Next', class: 'btn-primary' %>
 <% end %>
