--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
     <![endif]-->
 
     <%= stylesheet_link_tag 'application', media: 'all' %>
@@ -24,6 +24,7 @@
           <%= render partial: 'common/sidebar' %>
         </div><!--/span-->
         <div class="span9">
+          <%= render partial: 'common/flashes' %>
           <%= yield %>
         </div>
       </div>
