--- a/app/views/registrations/primary_contact.html.erb
+++ b/app/views/registrations/primary_contact.html.erb
@@ -14,21 +14,30 @@
   <li><a>Step 4</a></li>
 </ul>
 
-<%= simple_form_for @user, url: update_primary_contact_path do |f| %>
+<%= simple_form_for @organization, url: update_primary_contact_path do |f| %>
 
-  <%= f.input :primary_contact_name, label: 'Name' %>
+  <%= f.fields_for :primary_organization_administrator do |administrator| %>
 
-  <%= f.input :primary_contact_title, label: 'Title' %>
+    <%= administrator.fields_for :contact_info do |contact| %>
 
-  <%= f.input :primary_contact_language, label: 'Language', collection: Language.all %>
+      <%= contact.input :name, label: 'Name' %>
 
-  <%= f.input :primary_contact_office_email, label: 'Office e-mail' %>
+      <%= contact.input :title, label: 'Title' %>
 
-  <%= f.input :primary_contact_mobile_email, label: 'Mobile e-mail' %>
+      <%= contact.input :language, label: 'Language', collection: Language.all %>
 
-  <%= f.input :primary_contact_office_phone, label: 'Office Phone' %>
+      <%= contact.input :office_email, label: 'Office e-mail' %>
 
-  <%= f.input :primary_contact_mobile_phone, label: 'Mobile Phone' %>
+      <%= contact.input :mobile_email, label: 'Mobile e-mail' %>
+
+      <%= contact.input :office_phone, label: 'Office Phone' %>
+
+      <%= contact.input :mobile_phone, label: 'Mobile Phone' %>
+
+    <% end %>
+
+  <% end %>
 
   <%= f.button :submit, 'Next', class: 'btn-primary' %>
+
 <% end %>
