--- a/app/views/registrations/organization.html.erb
+++ b/app/views/registrations/organization.html.erb
@@ -11,7 +11,7 @@
   <li><a>Step 4</a></li>
 </ul>
 
-<%= simple_form_for @organization, url: update_organization_path do |f| %>
+<%= simple_form_for @organization, url: update_organization_path, html: { class: 'form-horizontal' } do |f| %>
   <%= f.input :name, label: 'Organization Name' %>
 
   <%= f.input :department %>
