--- a/app/views/admin/accounts/new.html.erb
+++ b/app/views/admin/accounts/new.html.erb
@@ -1,10 +1,3 @@
 <% title 'New Account' %>
 
-<%= simple_form_for [:admin, @account] do |f| %>
-
-  <%= f.input :name %>
-
-  <%= f.input :access_code %>
-
-  <%= f.button :submit, 'Save' %>
-<% end %>
+<%= render 'form' %>
