--- a/app/views/admin/common/_menu.html.erb
+++ b/app/views/admin/common/_menu.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-fixed-top">
   <div class="navbar-inner">
-      <div class="container-fluid">
+    <div class="container-fluid">
       <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -9,8 +9,10 @@
       <%= link_to 'Masas - Admin', admin_root_path, class: 'brand'  %>
       <div class="container-fluid nav-collapse">
         <ul class="nav">
-            <li><%= link_to 'Accounts', admin_accounts_path  %></li>
-            <li><%= link_to 'Logout', logout_path  %></li>
+          <li><%= link_to 'Accounts', admin_accounts_path  %></li>
+          <% if organization_admin_signed_in? %>
+            <li><%= link_to 'Logout', organization_admin_session_path  %></li>
+          <% end %>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
