Add approve organizations scenario

--- a/app/views/admin/organizations/index.html.erb
+++ b/app/views/admin/organizations/index.html.erb
@@ -13,11 +13,10 @@
         <td><%= organization.name %></td>
         <td>
           <div class="btn-toolbar">
-
+            <%= link_to 'Approve', approve_admin_organization_path(organization), class: 'btn'  %>
           </div>
         </td>
       </tr>
     <% end -%>
   </tbody>
-
 </table>
