Add reject organizations scenario

--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -2,4 +2,8 @@
 
 <p><%= @pending_approval_organizations.count %> Organizations pending approval</p>
 
+<p><%= @approved_organizations.count %> Organizations approved</p>
+
+<p><%= @rejected_organizations.count %> Organizations rejected</p>
+
 <p><%= link_to 'Review Pending Applications', admin_organizations_path(status: 'completed'), class: 'btn btn-primary' %></p>
