--- a/app/views/admin/organizations/index.html.erb
+++ b/app/views/admin/organizations/index.html.erb
@@ -14,6 +14,7 @@
         <td>
           <div class="btn-toolbar">
             <%= link_to 'Approve', approve_admin_organization_path(organization), class: 'btn'  %>
+            <%= link_to 'Reject',  reject_admin_organization_path(organization), class: 'btn'  %>
           </div>
         </td>
       </tr>
