--- a/app/views/admin/organizations/index.html.erb
+++ b/app/views/admin/organizations/index.html.erb
@@ -13,6 +13,7 @@
         <td><%= organization.name %></td>
         <td>
           <div class="btn-toolbar">
+            <%= link_to 'View', [:admin, organization], class: 'btn' %>
             <%= link_to 'Approve', approve_admin_organization_path(organization), class: 'btn'  %>
             <%= link_to 'Reject',  reject_admin_organization_path(organization), class: 'btn'  %>
           </div>
