Add headings to the steps for clarity

--- a/app/views/registrations/primary_contact.html.erb
+++ b/app/views/registrations/primary_contact.html.erb
@@ -14,6 +14,8 @@
   <li><a>Step 4</a></li>
 </ul>
 
+<h1>Primary Contact</h1>
+
 <%= simple_form_for @organization, url: update_primary_contact_path, html: { class: 'form-horizontal' } do |f| %>
 
   <%= f.fields_for :primary_organization_administrator do |administrator| %>
