--- a/app/views/registrations/organization.html.erb
+++ b/app/views/registrations/organization.html.erb
@@ -11,6 +11,8 @@
   <li><a>Step 4</a></li>
 </ul>
 
+<h1>Organizational Information</h1>
+
 <%= simple_form_for @organization, url: update_organization_path, html: { class: 'form-horizontal' } do |f| %>
   <%= f.input :name, label: 'Organization Name' %>
 
