--- a/app/views/registrations/agreement.html.erb
+++ b/app/views/registrations/agreement.html.erb
@@ -9,7 +9,7 @@
   <li><a>Step 4</a></li>
 </ul>
 
-<%= simple_form_for @organization, url: accept_agreement_path, html: { class: 'form-horizontal' } do |f| %>
+<%= simple_form_for @organization, url: accept_agreement_path do |f| %>
 
   <%= f.input :agreements, collection: agreements_options, as: :check_boxes %>
 
