--- a/app/views/registrations/primary_contact.html.erb
+++ b/app/views/registrations/primary_contact.html.erb
@@ -14,7 +14,7 @@
   <li><a>Step 4</a></li>
 </ul>
 
-<%= simple_form_for @organization, url: update_primary_contact_path, html: { class: 'form-horizontal' } do |f| %>
+<%= simple_form_for @organization, url: update_primary_contact_path do |f| %>
 
   <%= f.fields_for :primary_organization_administrator do |administrator| %>
 
