--- a/app/views/registrations/secondary_contact.html.erb
+++ b/app/views/registrations/secondary_contact.html.erb
@@ -13,7 +13,7 @@
   <li><a>Step 4</a></li>
 </ul>
 
-<%= simple_form_for @organization, url: update_secondary_contact_path, html: { class: 'form-horizontal' } do |f| %>
+<%= simple_form_for @organization, url: update_secondary_contact_path do |f| %>
 
   <%= f.fields_for :secondary_organization_administrator do |administrator| %>
 
