Add scenario for redirect organization admins after login

--- a/app/views/admin/accounts/index.html.erb
+++ b/app/views/admin/accounts/index.html.erb
@@ -4,6 +4,8 @@
 <%= link_to 'Add New User Account', new_admin_account_path, class: 'btn'  %>
 </p>
 
+<p><%= @accounts.count %> User Accounts</p>
+
 <table class="table table-bordered table-striped">
   <thead>
     <tr>
