--- a/app/views/admin/accounts/index.html.erb
+++ b/app/views/admin/accounts/index.html.erb
@@ -37,6 +37,7 @@
           <div class="btn-toolbar">
             <%= link_to 'View', admin_account_path(account), class: 'btn btn-primary' %>
             <%= link_to 'Edit', edit_admin_account_path(account), class: 'btn' %>
+            <%= link_to account.enabled? ? 'Disable' : 'Enable', toggle_enabled_admin_account_path(account), class: 'btn' %>
             <%= link_to 'Remove', admin_account_path(account), method: :delete, confirm: 'Sure?', class: 'btn btn-danger' %>
             <%= link_to 'Edit Permissions', permissions_admin_account_path(account), class: 'btn' %>
           </div>
