--- a/app/views/common/_menu.html.erb
+++ b/app/views/common/_menu.html.erb
@@ -6,12 +6,12 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <a class="brand" href="#">Masasx</a>
+      <%= link_to 'MASAS-X', root_path, class: 'brand'  %>
       <div class="container-fluid nav-collapse">
         <ul class="nav">
-            <li><%= link_to 'Registration', registration_path  %></li>
+            <li><%= link_to 'Application for Participant Organization', registration_path  %></li>
         </ul>
-      </div><!--/.nav-collapse -->
+      </div>
     </div>
   </div>
 </div>
