Add sidebar information

--- a/app/views/registrations/agreement.html.erb
+++ b/app/views/registrations/agreement.html.erb
@@ -1,5 +1,10 @@
 <% title 'Step 1 - Agreements' %>
 
+<% content_for :sidebar do -%>
+  <p>In order to complete your request for access, please review and agree to
+  the following.</p>
+<% end -%>
+
 <ul class="nav nav-pills">
   <li class="active">
   <%= link_to 'Step 1', registration_path  %>
