--- a/app/views/registrations/secondary_contact.html.erb
+++ b/app/views/registrations/secondary_contact.html.erb
@@ -1,5 +1,13 @@
 <% title 'Step 3 - Secondary Contact Information' %>
 
+<% content_for :sidebar do -%>
+  <p>
+  Please provide contact details for a Secondary Contact person (if needed,
+  this section is optional). This contact information will be kept on file for
+  administrative purposes, but does not have to be viewable by other users.
+  </p>
+<% end -%>
+
 <ul class="nav nav-pills">
   <li>
   <%= link_to 'Step 1', registration_path  %>
