--- a/app/views/registrations/primary_contact.html.erb
+++ b/app/views/registrations/primary_contact.html.erb
@@ -1,5 +1,14 @@
 <% title 'Step 3 - Primary Contact Information' %>
 
+<% content_for :sidebar do -%>
+  <p>
+  Please provide contact details for the person making this application. There
+  will be a need to communicate with you during the verification process, so
+  please ensure your contact information is complete and accurate. This
+  contact information will be kept on file for administrative purposes, but
+  does not have to be viewable by other users.
+  </p>
+<% end -%>
 
 <ul class="nav nav-pills">
   <li>
