--- a/app/views/registrations/references.html.erb
+++ b/app/views/registrations/references.html.erb
@@ -1,5 +1,17 @@
 <% title 'Step 4 - References Information' %>
 
+<% content_for :sidebar do -%>
+  <p>
+  Please provide a reference that the MASAS­X team can validate your
+  credentials with. This will expedite the process of accepting your account.
+  Please provide a validating person (other than yourself or a family member)
+  who can verify your request for access (i.e., it can be someone within your
+  organization, an existing member of MASAS­X, a vendor, etc.). Please provide
+  that reference's name, phone number, e­mail address and other relevant
+  details (if applicable).
+  </p>
+<% end -%>
+
 <ul class="nav nav-pills">
   <li>
   <%= link_to 'Step 1', registration_path  %>
