--- a/app/views/registrations/references.html.erb
+++ b/app/views/registrations/references.html.erb
@@ -14,20 +14,20 @@
 
 <ul class="nav nav-pills">
   <li>
-  <%= link_to 'Step 1', registration_path  %>
+  Step 1
   </li>
   <li>
-  <%= link_to 'Step 2', organization_path(@user)  %>
+  Step 2
   </li>
   <li>
-  <%= link_to 'Step 3', secondary_contact_path(@user)  %>
+  Step 3
   </li>
   <li class="active">
-  <%= link_to 'Step 4', references_path(@user)  %>
+  Step 4
   </li>
 </ul>
 
-<%= simple_form_for @organization, url: update_references_path  do |f| %>
+<%= simple_form_for @organization, url: next_step_path, method: :put  do |f| %>
 
   <%= f.input :references_language, label: 'Language', collection: Language.all %>
 
