--- a/app/views/registrations/organization.html.erb
+++ b/app/views/registrations/organization.html.erb
@@ -12,16 +12,16 @@
 
 <ul class="nav nav-pills">
   <li>
-  <%= link_to 'Step 1', registration_path  %>
+  Step 1
   </li>
   <li class="active">
-  <%= link_to 'Step 2', organization_path  %>
+  Step 2
   </li>
   <li><a>Step 3</a></li>
   <li><a>Step 4</a></li>
 </ul>
 
-<%= simple_form_for @organization, url: update_organization_path do |f| %>
+<%= simple_form_for @organization, url: next_step_path, method: :put do |f| %>
   <%= f.input :name, label: 'Organization Name' %>
 
   <%= f.input :department %>
@@ -36,5 +36,6 @@
 
   <%= f.input :website %>
 
+  <%= link_to 'Previous', previous_step_path(@organization), class: 'btn'  %>
   <%= f.button :submit, 'Next', class: 'btn-primary' %>
 <% end %>
