--- a/app/views/registrations/primary_contact.html.erb
+++ b/app/views/registrations/primary_contact.html.erb
@@ -47,7 +47,7 @@
 
   <% end %>
 
-  <%= link_to 'Previous', previous_step_path(@organization), class: 'btn'  %>
+ Information  <%= link_to 'Previous', previous_step_path(@organization), class: 'btn'  %>
   <%= f.button :submit, 'Next', class: 'btn-primary' %>
 
 <% end %>
