--- a/app/views/registrations/secondary_contact.html.erb
+++ b/app/views/registrations/secondary_contact.html.erb
@@ -45,5 +45,6 @@
 
   <% end %>
 
+  <%= link_to 'Previous', previous_step_path(@organization), class: 'btn'  %>
   <%= f.button :submit, 'Next', class: 'btn-primary' %>
 <% end %>
