Do not use links for wizard navigation

--- a/app/views/registrations/secondary_contact.html.erb
+++ b/app/views/registrations/secondary_contact.html.erb
@@ -10,13 +10,13 @@
 
 <ul class="nav nav-pills">
   <li>
-  Step 1
+  <a>Step 1</a>
   </li>
   <li>
-  Step 2
+  <a>Step 2</a>
   </li>
   <li class="active">
-  Step 3
+  <a>Step 3</a>
   </li>
   <li><a>Step 4</a></li>
 </ul>
