--- a/app/views/registrations/agreement.html.erb
+++ b/app/views/registrations/agreement.html.erb
@@ -7,7 +7,7 @@
 
 <ul class="nav nav-pills">
   <li class="active">
-  Step 1
+  <a>Step 1</a>
   </li>
   <li><a>Step 2</a></li>
   <li><a>Step 3</a></li>
