--- a/app/views/registrations/organization.html.erb
+++ b/app/views/registrations/organization.html.erb
@@ -12,10 +12,10 @@
 
 <ul class="nav nav-pills">
   <li>
-  Step 1
+  <a>Step 1</a>
   </li>
   <li class="active">
-  Step 2
+  <a>Step 2</a>
   </li>
   <li><a>Step 3</a></li>
   <li><a>Step 4</a></li>
