--- a/app/views/registrations/primary_contact.html.erb
+++ b/app/views/registrations/primary_contact.html.erb
@@ -12,13 +12,13 @@
 
 <ul class="nav nav-pills">
   <li>
-  Step 1
+  <a>Step 1</a>
   </li>
   <li>
-  Step 2
+  <a>Step 2</a>
   </li>
   <li class="active">
-  Step 3
+  <a>Step 3</a>
   </li>
   <li><a>Step 4</a></li>
 </ul>
@@ -47,7 +47,7 @@
 
   <% end %>
 
- Information  <%= link_to 'Previous', previous_step_path(@organization), class: 'btn'  %>
+  <%= link_to 'Previous', previous_step_path(@organization), class: 'btn'  %>
   <%= f.button :submit, 'Next', class: 'btn-primary' %>
 
 <% end %>
