--- a/app/views/registrations/references.html.erb
+++ b/app/views/registrations/references.html.erb
@@ -14,16 +14,16 @@
 
 <ul class="nav nav-pills">
   <li>
-  Step 1
+  <a>Step 1</a>
   </li>
   <li>
-  Step 2
+  <a>Step 2</a>
   </li>
   <li>
-  Step 3
+  <a>Step 3</a>
   </li>
   <li class="active">
-  Step 4
+  <a>Step 4</a>
   </li>
 </ul>
 
