Break out each page into its own step

--- a/app/views/registrations/secondary_contact.html.erb
+++ b/app/views/registrations/secondary_contact.html.erb
@@ -1,4 +1,4 @@
-<% title 'Step 3 - Secondary Contact Information' %>
+<% title 'Step 4 - Secondary Contact Information' %>
 
 <% content_for :sidebar do -%>
   <p>
@@ -8,18 +8,7 @@
   </p>
 <% end -%>
 
-<ul class="nav nav-pills">
-  <li>
-  <a>Step 1</a>
-  </li>
-  <li>
-  <a>Step 2</a>
-  </li>
-  <li class="active">
-  <a>Step 3</a>
-  </li>
-  <li><a>Step 4</a></li>
-</ul>
+<%= render partial: 'steps' %>
 
 <%= simple_form_for @organization, url: next_step_path, method: :put do |f| %>
 
