--- a/app/views/registrations/agreement.html.erb
+++ b/app/views/registrations/agreement.html.erb
@@ -5,14 +5,7 @@
   the following.</p>
 <% end -%>
 
-<ul class="nav nav-pills">
-  <li class="active">
-  <a>Step 1</a>
-  </li>
-  <li><a>Step 2</a></li>
-  <li><a>Step 3</a></li>
-  <li><a>Step 4</a></li>
-</ul>
+<%= render partial: 'steps' %>
 
 <%= simple_form_for @organization, url: next_step_path(@organization), method: :put do |f| %>
 
