--- a/app/views/registrations/organization.html.erb
+++ b/app/views/registrations/organization.html.erb
@@ -10,16 +10,7 @@
   </p>
 <% end -%>
 
-<ul class="nav nav-pills">
-  <li>
-  <a>Step 1</a>
-  </li>
-  <li class="active">
-  <a>Step 2</a>
-  </li>
-  <li><a>Step 3</a></li>
-  <li><a>Step 4</a></li>
-</ul>
+<%= render partial: 'steps' %>
 
 <%= simple_form_for @organization, url: next_step_path, method: :put do |f| %>
   <%= f.input :name, label: 'Organization Name' %>
