--- a/app/views/admin/common/_menu.html.erb
+++ b/app/views/admin/common/_menu.html.erb
@@ -9,9 +9,12 @@
       <%= link_to 'Masas - Admin', admin_root_path, class: 'brand'  %>
       <div class="container-fluid nav-collapse">
         <ul class="nav">
-          <li><%= link_to 'Accounts', admin_accounts_path  %></li>
           <% if organization_admin_signed_in? %>
-            <li><%= link_to 'Logout', organization_admin_session_path  %></li>
+            <li><%= link_to 'Accounts', admin_accounts_path  %></li>
+            <li><%= link_to 'Logout', destroy_organization_admin_session_path, method: :delete  %></li>
+          <% end %>
+          <% if masasx_clerk_signed_in? %>
+            <li><%= link_to 'Logout', destroy_masasx_clerk_session_path, method: :delete  %></li>
           <% end %>
         </ul>
       </div><!--/.nav-collapse -->
