--- a/app/views/registrations/organization.html.erb
+++ b/app/views/registrations/organization.html.erb
@@ -27,6 +27,8 @@
 
   <%= f.input :website %>
 
-  <%= link_to 'Previous', previous_step_path(@organization), class: 'btn'  %>
-  <%= f.button :submit, 'Next', class: 'btn-primary' %>
+  <div class="form-actions">
+    <%= link_to 'Previous', previous_step_path(@organization), class: 'btn'  %>
+    <%= f.button :submit, 'Next', class: 'btn-primary' %>
+  </div>
 <% end %>
