--- a/app/views/registrations/secondary_contact.html.erb
+++ b/app/views/registrations/secondary_contact.html.erb
@@ -34,6 +34,8 @@
 
   <% end %>
 
-  <%= link_to 'Previous', previous_step_path(@organization), class: 'btn'  %>
-  <%= f.button :submit, 'Next', class: 'btn-primary' %>
+  <div class="form-actions">
+    <%= link_to 'Previous', previous_step_path(@organization), class: 'btn'  %>
+    <%= f.button :submit, 'Next', class: 'btn-primary' %>
+  </div>
 <% end %>
