--- a/app/views/registrations/organization.html.erb
+++ b/app/views/registrations/organization.html.erb
@@ -23,6 +23,16 @@
 
   <%= f.input :address_line_1, label: 'Address Line 1' %>
 
+  <%= f.input :address_line_2, label: 'Address Line 2' %>
+
+  <%= f.input :city, label: 'City' %>
+
+  <%= f.input :state, label: 'State/Prov' %>
+
+  <%= f.input :country, label: 'Country', as: :string %>
+
+  <%= f.input :postal_code, label: 'Postal code' %>
+
   <%= f.input :telephone %>
 
   <%= f.input :website %>
