Add address to view organization details feature

--- a/app/views/admin/organizations/show.html.erb
+++ b/app/views/admin/organizations/show.html.erb
@@ -25,6 +25,25 @@
   </tr>
 </table>
 
+<table class="table">
+  <thead>
+    <th>Address Line 1</th>
+    <th>Address Line 2</th>
+    <th>City</th>
+    <th>Country</th>
+    <th>State</th>
+    <th>Postal code</th>
+  </thead>
+  <tr>
+    <td><%= @organization.address_line_1 %></td>
+    <td><%= @organization.address_line_2 %></td>
+    <td><%= @organization.city %></td>
+    <td><%= @organization.country %></td>
+    <td><%= @organization.state %></td>
+    <td><%= @organization.postal_code %></td>
+  </tr>
+</table>
+
 <h2>Contacts Details:</h2>
 
 <table class="table table-bordered table-striped">
