Complete first two scenarios about executive authority

--- a/app/views/registrations/primary_contact.html.erb
+++ b/app/views/registrations/primary_contact.html.erb
@@ -30,6 +30,8 @@
 
       <%= administrator.input :mobile_phone, label: 'Mobile Phone' %>
 
+      <%= administrator.input :executive, label: 'Executive' %>
+
   <% end %>
 
   <div class="form-actions">
