--- a/app/views/registrations/secondary_contact.html.erb
+++ b/app/views/registrations/secondary_contact.html.erb
@@ -28,6 +28,8 @@
 
     <%= administrator.input :mobile_phone, label: 'Mobile Phone' %>
 
+    <%= administrator.input :executive, label: 'Executive' %>
+
   <% end %>
 
   <div class="form-actions">
