Fix should not have the option for the secondary scenario

--- a/app/views/registrations/secondary_contact.html.erb
+++ b/app/views/registrations/secondary_contact.html.erb
@@ -28,7 +28,7 @@
 
     <%= administrator.input :mobile_phone, label: 'Mobile Phone' %>
 
-    <%= administrator.input :executive, label: 'Executive' %>
+    <%= administrator.input :executive, label: 'Executive', disabled: @organization.has_executive? %>
 
   <% end %>
 
