--- a/app/views/registrations/_steps.html.erb
+++ b/app/views/registrations/_steps.html.erb
@@ -1,17 +1,7 @@
 <ul class="nav nav-pills">
-  <li class="<%= 'active' if @current_step == 1 %>">
-  <a>Step 1</a>
-  </li>
-  <li class="<%= 'active' if @current_step == 2 %>">
-  <a>Step 2</a>
-  </li>
-  <li class="<%= 'active' if @current_step == 3 %>">
-  <a>Step 3</a>
-  </li>
-  <li class="<%= 'active' if @current_step == 4 %>">
-  <a>Step 4</a>
-  </li>
-  <li class="<%= 'active' if @current_step == 5 %>">
-  <a>Step 5</a>
-  </li>
+  <% for step in Navigator.steps(@organization) %>
+    <li class="<%= 'active' if @organization.status?(step) %>">
+    <a><%= step.to_s.humanize %></a>
+    </li>
+  <% end %>
 </ul>
