--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,41 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title><%= content_for?(:title) ? yield(:title) : 'MASAX' %></title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <%= csrf_meta_tags %>
-
-    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
-    <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
-    <![endif]-->
-
-    <%= stylesheet_link_tag 'application', media: 'all' %>
-
-    <link href="images/favicon.ico" rel="shortcut icon">
-  </head>
-  <body>
-
-    <%= render partial: 'common/menu' %>
-
-    <div class="container-fluid">
-      <div class="row-fluid">
-        <div class="span3">
-          <%= render partial: 'common/sidebar' %>
-        </div><!--/span-->
-        <div class="span9">
-          <%= content_tag(:h1, yield(:title)) if content_for?(:title) %>
-          <%= render partial: 'common/flashes' %>
-          <%= yield %>
-        </div>
-      </div>
-
-      <%= render partial: 'common/footer' %>
-
+<% content_for :container do %>
+  <div class="row-fluid">
+    <div class="span3">
+      <%= render partial: 'common/sidebar' %>
+    </div><!--/span-->
+    <div class="span9">
+      <%= content_tag(:h1, yield(:title)) if content_for?(:title) %>
+      <%= render partial: 'common/flashes' %>
+      <%= yield %>
     </div>
-
-    <%= javascript_include_tag 'application' %>
-
-  </body>
-</html>
+  </div>
+<% end %>
+<%= render :template => 'layouts/common' %>
