Fix back to review application bug

--- a/app/views/admin/organizations/show.html.erb
+++ b/app/views/admin/organizations/show.html.erb
@@ -73,4 +73,4 @@
   </tbody>
 </table>
 
-<%= link_to 'Back to review applications', admin_organizations_path(status: 'completed'), class: 'btn btn-primary'  %>
+<%= link_to 'Back to review applications', admin_organizations_path(status: 'pending_approval'), class: 'btn btn-primary'  %>
