--- a/app/views/registrations/authority.html.erb
+++ b/app/views/registrations/authority.html.erb
@@ -20,7 +20,7 @@
 
     <%= administrator.input :mobile_phone, label: 'Mobile Phone' %>
 
-    <%= administrator.input :executive, label: 'Executive', disabled: true %>
+    <%= administrator.input :executive, label: 'Executive Authority', disabled: true %>
 
     <%= administrator.input :address_line_1, label: 'Address Line 1' %>
 
