--- a/app/views/registrations/primary_contact.html.erb
+++ b/app/views/registrations/primary_contact.html.erb
@@ -30,7 +30,7 @@
 
     <%= administrator.input :mobile_phone, label: 'Mobile Phone' %>
 
-    <%= administrator.input :executive, label: 'Executive' %>
+    <%= administrator.input :executive, label: 'Executive Authority', disabled: @organization.has_executive? %>
 
     <%= administrator.input :address_line_1, label: 'Address Line 1' %>
 
