--- a/app/views/registrations/secondary_contact.html.erb
+++ b/app/views/registrations/secondary_contact.html.erb
@@ -28,7 +28,7 @@
 
     <%= administrator.input :mobile_phone, label: 'Mobile Phone' %>
 
-    <%= administrator.input :executive, label: 'Executive', disabled: @organization.has_executive? %>
+    <%= administrator.input :executive, label: 'Executive Authority', disabled: @organization.has_executive? %>
 
     <%= administrator.input :address_line_1, label: 'Address Line 1' %>
 
