Update sidebar text for primary contact

--- a/app/views/registrations/primary_contact.html.erb
+++ b/app/views/registrations/primary_contact.html.erb
@@ -2,11 +2,13 @@
 
 <% content_for :sidebar do -%>
   <p>
-  Please provide contact details for the person making this application. There
-  will be a need to communicate with you during the verification process, so
-  please ensure your contact information is complete and accurate. This
-  contact information will be kept on file for administrative purposes, but
-  does not have to be viewable by other users.
+  Please provide the Primary Contact information for the Organization making
+  this application. There will be a need to communicate with you during the
+  verification process, so please ensure your contact information is complete
+  and accurate. This contact information will be kept on file for
+  administrative purposes, but does not have to be viewable by other users. If
+  you are the Organization contact that is authorizing the creation of the
+  account (typically an executive) please indicate this.
   </p>
 <% end -%>
 
