Update sidebar text for secondary contact

--- a/app/views/registrations/secondary_contact.html.erb
+++ b/app/views/registrations/secondary_contact.html.erb
@@ -2,9 +2,10 @@
 
 <% content_for :sidebar do -%>
   <p>
-  Please provide contact details for a Secondary Contact person (if needed,
-  this section is optional). This contact information will be kept on file for
-  administrative purposes, but does not have to be viewable by other users.
+  Please provide contact details for a Secondary Contact person. This contact
+  information will be kept on file for administrative purposes, but does not
+  have to be viewable by other users. We use this information in the event
+  that we can't reach the Organization's Primary Contact.
   </p>
 <% end -%>
 
