Update authority step heading

--- a/app/views/registrations/authority.html.erb
+++ b/app/views/registrations/authority.html.erb
@@ -1,4 +1,4 @@
-<% title 'Step 5 - Authority Contact Information' %>
+<% title 'Step 5 - Executive Authority Contact Information' %>
 
 <%= render partial: 'steps' %>
 
