Remove numbers from steps heading

--- a/app/views/registrations/agreement.html.erb
+++ b/app/views/registrations/agreement.html.erb
@@ -1,4 +1,4 @@
-<% title 'Step 1 - Agreements' %>
+<% title 'Agreements' %>
 
 <% content_for :sidebar do -%>
   <p>In order to complete your request for access, please review and agree to
