--- a/app/views/registrations/primary_contact.html.erb
+++ b/app/views/registrations/primary_contact.html.erb
@@ -1,4 +1,4 @@
-<% title 'Step 3 - Primary Contact Information' %>
+<% title 'Primary Contact Information' %>
 
 <% content_for :sidebar do -%>
   <p>
