--- a/app/views/registrations/secondary_contact.html.erb
+++ b/app/views/registrations/secondary_contact.html.erb
@@ -1,4 +1,4 @@
-<% title 'Step 4 - Secondary Contact Information' %>
+<% title 'Secondary Contact Information' %>
 
 <% content_for :sidebar do -%>
   <p>
